fixed general layout issues. Fixed issue on server 'post' route that did not save lastUpdated date.

--- a/client/src/components/AddLocation.css
+++ b/client/src/components/AddLocation.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   font-family: "Montserrat", sans-serif;
+  margin: 0 2em;
 }
 
 .form-label {
@@ -9,7 +10,6 @@
 }
 .form-input {
   position: relative;
-  max-width: 400px;
   height: 2rem;
   font-size: 1rem;
   margin: 0.25em 0 0.75em;
@@ -18,7 +18,6 @@
 }
 
 .form-textarea {
-  max-width: 400px;
   font-size: 1rem;
   margin: 0.25em 0 0.75em;
   border: 1px solid #b87333;
