--- a/client/src/components/StateLocationMap.css
+++ b/client/src/components/StateLocationMap.css
@@ -1,4 +1,5 @@
 #map {
   height: 99vh;
-  margin-top: -3rem;
+  width: 100%;
+  margin-top: -4rem;
 }
