--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,5 +21,6 @@ code {
 }
 
 .content-container {
-  margin: 1em;
+  margin: 1em auto;
+  max-width: 1200px;
 }
